--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,19 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/event-manager": "1.2",
         "doctrine/orm": "^2.9",
-        "jms/serializer-bundle": "^3.10",
+        "friendsofsymfony/rest-bundle": "*",
+        "jms/serializer-bundle": "*",
         "lcobucci/jwt": "^4.3.0",
         "lexik/jwt-authentication-bundle": "*",
         "symfony/console": "^5.0",
         "symfony/dotenv": "^5.0",
+        "symfony/flex": "*",
         "symfony/framework-bundle": "^4.4|^5.0",
-        "symfony/orm-pack": "*",
         "symfony/polyfill-php80": "*",
         "symfony/runtime": "^5.0",
         "symfony/yaml": "^5.0"
