--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,4 +7,7 @@ controllers:
     resource: ../src/Controller/
     type: annotation
     prefix: /
+api_login_check:
+    path: /api/login_check
+
 
