--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,43 @@
 {
-    "name": "symfony/skeleton",
     "type": "project",
     "license": "proprietary",
-    "description": "A minimal Symfony project recommended to create bare bones applications",
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "*",
-        "doctrine/doctrine-migrations-bundle": "^3.1",
-        "doctrine/event-manager": "1.2",
-        "doctrine/orm": "^2.9",
-        "friendsofsymfony/rest-bundle": "*",
-        "jms/serializer-bundle": "*",
-        "lcobucci/jwt": "^4.3.0",
-        "lexik/jwt-authentication-bundle": "*",
-        "symfony/console": "^5.0",
-        "symfony/dotenv": "^5.0",
-        "symfony/flex": "*",
-        "symfony/framework-bundle": "^4.4|^5.0",
-        "symfony/polyfill-php80": "*",
-        "symfony/runtime": "^5.0",
-        "symfony/yaml": "^5.0"
+        "doctrine/annotations": "*",
+        "doctrine/doctrine-bundle": "^2.8",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.14",
+        "jms/serializer": "^3.23",
+        "lexik/jwt-authentication-bundle": "^2.18",
+        "nelmio/api-doc-bundle": "^4.11",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.16",
+        "sensio/framework-extra-bundle": "v6.2.9",
+        "stof/doctrine-extensions-bundle": "^1.7",
+        "symfony/asset": "6.2.*",
+        "symfony/console": "6.2.*",
+        "symfony/dotenv": "6.2.*",
+        "symfony/flex": "^2",
+        "symfony/framework-bundle": "6.2.*",
+        "symfony/property-access": "6.2.*",
+        "symfony/property-info": "6.2.*",
+        "symfony/runtime": "6.2.*",
+        "symfony/security-bundle": "6.2.*",
+        "symfony/serializer": "6.2.*",
+        "symfony/twig-bundle": "6.2.*",
+        "symfony/validator": "6.2.*",
+        "symfony/yaml": "6.2.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0",
+        "willdurand/hateoas-bundle": "^2.5"
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/maker-bundle": "^1.48"
     },
     "config": {
         "allow-plugins": {
@@ -32,9 +45,7 @@
             "symfony/flex": true,
             "symfony/runtime": true
         },
-        "sort-packages": true,
-        "disable-tls": true,
-        "secure-http": false
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
@@ -53,8 +64,7 @@
         "symfony/polyfill-php73": "*",
         "symfony/polyfill-php74": "*",
         "symfony/polyfill-php80": "*",
-        "symfony/polyfill-php81": "*",
-        "symfony/polyfill-php82": "*"
+        "symfony/polyfill-php81": "*"
     },
     "scripts": {
         "auto-scripts": {
@@ -74,10 +84,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "^5.0"
+            "require": "6.2.*"
         }
-    },
-    "require-dev": {
-        "symfony/maker-bundle": "*"
     }
 }
