--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,13 +1,3 @@
-# controllers:
-#     resource:
-#         path: ../src/Controller/
-#         namespace: App\Controller
-#     type: attribute
-controllers:
-    resource: ../src/Controller/
-    type: annotation
-    prefix: /
-api_login_check:
-    path: /api/login_check
-
-
+#index:
+#    path: /
+#    controller: App\Controller\DefaultController::index
