--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/orm": "^3.0",
         "friendsofsymfony/rest-bundle": "^3.6",
         "jms/serializer-bundle": "^5.4",
+        "knplabs/knp-paginator-bundle": "^6.3",
         "lexik/jwt-authentication-bundle": "*",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
